tests/negative/neg_string_index.safe
-- Test: neg_string_index
-- Description: String indexing remains outside the PR11.2 text subset.
-- Expected: REJECT unsupported_source_construct

package neg_String_Index

   function first_Letter (name : in string) returns character

      return name (1);



